tools/gn: write out the required version of ninja

Write to the build.ninja file the required version of Ninja
to avoid problems like the one that happended in
https://groups.google.com/a/chromium.org/d/msgid/chromium-dev/CAMGbLiFsmWqyHnriH3eFB%2BmQ_CXs1qSTKSaP4fv3GQYf3Zr63Q%40mail.gmail.com?utm_medium=email&utm_source=footer

BUG=732518

Change-Id: Ief55a93798de15fa5fae0b74db6ab7c4c844e5aa